- Added except throttle {}, only working when #define THROTTLE
- Doc/text updates
- Changed version to beta15
- Fixed /setident bug
*** beta15 release **
- Fixed a problem with modules not loading when #undef STRIPBADWORDS
- Doc updates (SSL/stunnel example was wrong)
- Fixed a buffer overflow that could be used against setuid setups, 
  found by rave@dtors.net, reported by kokanin
- Disabled CMDLINE_CONFIG(-f) by default
- Fixed a bug in /list where opers could not see +s channels when doing /list #channel. 
  Reported by _SciFi_ (#0000762)
- Fixed a /who big which could make the server crash (oper only).
- Fixed a match() bug
- Fixed a /version bug
- Improved fake lag stuff
- Improved previous /version bugfix
- Fixed some missing /helpop info reported by Jaw959 (#0000782)
- Added set::throttle::period to allow you to change the throttling period 
  (requires THROTTLING)
- Updated some documentation
- Fixed "proxyscan on quit" bug (#0000788)
- Moved the "flood from unknown connection" notices to snomask +f
- Fixed compile error
- Fixed a restrict-usermodes bug reported by Rocko (#0000796)
- Minor /die and /restart code cleanups
- Added channel mode +M to 005 (#0000803) reported by jollino
- Fixed a bug where +x would make hosts lowercase (#0000810) reported by rayman
- Implemented a ban version {} (bans users based on CTCP VERSION). It works by sending out
  a CTCP VERSION when a user connects then checking the reply. If you don't use any 
  ban version{}'s then no version request is sent so users are not inconvenienced.
- Rewrote the "flood from unknown connection" system to kill all matching users immediately
  and also added set::anti-flood::unknown-flood-bantime and 
  set::anti-flood::unknown-flood-amount to set the length of time an unknown connection
  flooder is banned for and how much data (in KB) the user must send before being banned.
  This should fix (#0000767) reported by ora.
- Updated some documentation
- (Hopefully) fixed some Ziplinks problems